tests/bad_programs/type_errors/bad_return_in_block.nc
int main() {
    {
        return false;
    }
    return 0;
}
